--- a/src/styles/themes/default/components/_section.scss
+++ b/src/styles/themes/default/components/_section.scss
@@ -13,7 +13,6 @@ body{
   width: 100vw;
 }
 .header{
-  height: 100vh;
   position: relative;
   h2{
     margin: auto;
@@ -50,9 +49,9 @@ body{
     display: flex;
 justify-content: center;
 text-align: center;
-margin-top: 10%;
 h2{
   font-size: 30px;
+  margin-top: 5%;
 }
 span{
   font-size: 80px;
@@ -76,6 +75,63 @@ p{
   font-weight: bold;
   margin: auto;
   font-family: -apple-system;
+}
+  }
+}
+.main{
+  height: 100vh;
+  width: 100%;
+  &__categories{
+    justify-content: center;
+display: flex;
+align-items: center;
+div{
+  width: 15%;
+  border-bottom: 2px solid rgb(179, 217, 245);
+  margin: 15px;
+}
+  }
+  &__header{
+    color: white;
+    width: 100%;
+    margin: auto;
+    display: flex;
+justify-content: center;
+text-align: center;
+margin-top: 10%;
+h2{
+  font-size: 30px;
+}
+span{
+  font-size: 80px;
+}
+  }
+  &__service{
+    width: 50%;
+margin: auto;
+display: flex;
+flex-wrap: wrap;
+justify-content: space-between;
+height: 30%;
+  }
+  &__descriptions{
+    display: flex;
+justify-content: space-around;
+align-items: center;
+width: 45%;
+height: 50%;
+border: 2px solid rgb(122, 122, 242);
+border-radius: 50px;
+margin: 15px 0;
+div{
+  width: 40%;
+  h2,
+  p{
+    margin: 0;
+  }
+  p{
+    font-size: 12px;
+  }
 }
   }
 }
