--- a/src/styles/themes/default/components/_section.scss
+++ b/src/styles/themes/default/components/_section.scss
@@ -1,4 +1,5 @@
 p,
+h1,
 h2,
 h3,
 h4{
@@ -133,5 +134,21 @@ div{
     font-size: 12px;
   }
 }
+  }
+}
+.project__first{
+  width: 40%;
+  position: relative;
+  img{
+    width: 100%;
+    border-radius: 20px;
+  }
+  div{
+    position: absolute;
+    top: 0;
+    left: 0;
+    p{
+      color: black;
+    }
   }
 }
