--- a/src/styles/themes/default/components/_section.scss
+++ b/src/styles/themes/default/components/_section.scss
@@ -171,7 +171,7 @@ p{
 margin: 50px auto;
 display: flex;
 position: relative;
-height: 400px;
+height: 550px;
   }
   &__subwrapper-first{
     width: 60%;
@@ -211,8 +211,51 @@ align-items: flex-end;
     }
   }
 }
-
 &__first{width: 100%;}
 &__second,
 &__third{width: 90%;}
+}
+.technology{
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  background-color: rgb(0, 0, 61);
+  h2{
+    font-size: 55px;
+text-align: center;
+align-self: center;
+  }
+  &__paragraph{
+    display: grid;
+    justify-content: center;
+    p{
+    font-size: 20px;
+    }
+  }
+  &__tools{
+    display: flex;
+justify-content: center;
+    img{
+      width: 32px;
+    }
+  }
+  &__container{
+    margin: 5px 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    div{
+      width: 60px;
+height: 60px;
+display: flex;
+justify-content: center;
+align-items: center;
+background-color: white;
+border-radius: 5px;
+    }
+    p{
+      text-align: center;
+      font-size: 12px;
+    }
+  }
 }
