--- a/src/styles/themes/default/components/_section.scss
+++ b/src/styles/themes/default/components/_section.scss
@@ -15,6 +15,7 @@ body{
 }
 .header{
   position: relative;
+  height: 100vh;
   h2{
     margin: auto;
   }
@@ -162,6 +163,7 @@ border: 1px solid white;
 width: 30%;
 border-radius: 25px;
 margin-right: 40px;
+margin-top: 10px;
 p{
   text-align: center;
 }
@@ -171,15 +173,19 @@ p{
 margin: 50px auto;
 display: flex;
 position: relative;
-height: 550px;
+height: 70vh;
   }
   &__subwrapper-first{
     width: 60%;
     position: relative;
+    top: 10%;
 z-index: 3;
 display: flex;
 flex-direction: column;
 align-items: flex-end;
+.project__button{
+  margin-right: 10%;
+}
   }
   &__subwrapper-second{
     width: 50%;
@@ -204,16 +210,32 @@ align-items: flex-end;
   }
   div{
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 15%;
+    p{
+      font-family: -apple-system;
+      font-size: 16px;
+    }
+  }
+}
+&__first{
+  width: 100%;
+  div{
+    left: 1%;
+  }
+}
+&__second,
+&__third{
+  width: 90%;
+  div{
+    right: 1%;
     p{
       color: black;
     }
   }
 }
-&__first{width: 100%;}
-&__second,
-&__third{width: 90%;}
+&__third{
+  margin-top: 10px;
+}
 }
 .technology{
   width: 100%;
