--- a/src/styles/themes/default/components/_section.scss
+++ b/src/styles/themes/default/components/_section.scss
@@ -281,3 +281,31 @@ border-radius: 5px;
     }
   }
 }
+.footer{
+  display: flex;
+justify-content: center;
+align-items: center;
+p{
+  cursor: pointer;
+}
+  &__sign{
+    h2{
+      font-size: 50px;
+    }
+    h4{
+      font-size: 15px;
+    }
+  }
+  div{
+    margin: 0 30px;
+  }
+  &__img{
+    img{
+      width: 45px;
+      height: 45px;
+      margin: 0 10px;
+      cursor: pointer;
+    }
+  }
+}
+// #B500AA
