--- a/src/styles/themes/variables.scss
+++ b/src/styles/themes/variables.scss
@@ -14,6 +14,7 @@ $c-charm-opacity: rgba(219, 125, 149, 0.87);
 $c-light-orchid-opacity: rgba(216, 138, 210, 0.87);
 $c-orchid-opacity: rgba(207, 97, 198, 0.87);
 $c-cerise-opacity: rgba(219, 59, 134, 0.87);
+$c-flirt: #B500AA;
 
 /* = fonts
 ********************************* */
