--- a/src/styles/themes/default/components/_section.scss
+++ b/src/styles/themes/default/components/_section.scss
@@ -81,7 +81,6 @@ body {
   }
 }
 .main {
-  height: 100vh;
   width: 100%;
   &__categories {
     justify-content: center;
@@ -114,7 +113,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    height: 30%;
+    height: 30vh;
   }
   &__descriptions {
     display: flex;
@@ -202,20 +201,7 @@ body {
   &__first,
   &__second,
   &__third {
-    position: relative;
-    img {
-      width: 100%;
-      height: 100%;
-      border-radius: 20px;
-    }
-    div {
-      position: absolute;
-      top: 15%;
-      p {
-        font-family: -apple-system;
-        font-size: 16px;
-      }
-    }
+    @include firstsecondthird
   }
   &__first {
     width: 100%;
