--- a/src/styles/themes/mixins.scss
+++ b/src/styles/themes/mixins.scss
@@ -19,16 +19,22 @@
     border-bottom-right-radius: $arg;
 }
 
-@mixin blackTriangle($arg){
+@mixin firstsecondthird {
   position: relative;
-  top: -28px;
-  $arg: 0;
-  content: "";
-  width: 0;
-  height: 0;
-  border-bottom: 46px solid $c-steel-gray;
+  img {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+  }
+  div {
+    position: absolute;
+    top: 15%;
+    p {
+      font-family: -apple-system;
+      font-size: 16px;
+    }
+  }
 }
-
 $sizes: 1, 2, 3, 4, 5;
 @mixin createCol(){
     @each $size in $sizes {
@@ -48,4 +54,4 @@ $sizes: 1, 2, 3, 4, 5;
     }
   }
 
-@include createCol();
+
