add form, add javasend, add categorieProject in common component, move global element style to global component, add styles, change picture,

--- a/src/styles/themes/global.scss
+++ b/src/styles/themes/global.scss
@@ -1,3 +1,36 @@
 @import './variables.scss';
 @import './normalize';
 @import './fonts.scss';
+
+p,
+h1,
+h2,
+h3,
+h4 {
+  color: white;
+  cursor: default;
+}
+body {
+  background-image: url(../../picture/portfolio-back.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+button {
+  background-color: transparent;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  border: 1px solid white;
+  width: 15%;
+  border-radius: 25px;
+  margin: auto;
+  cursor: pointer;
+  p {
+    text-align: center;
+    white-space: nowrap;
+    cursor: pointer;
+  }
+}
+p {
+  font-family: -apple-system;
+}
