--- a/src/styles/themes/default/components/_section.scss
+++ b/src/styles/themes/default/components/_section.scss
@@ -1,33 +1,3 @@
-p,
-h1,
-h2,
-h3,
-h4 {
-  color: white;
-}
-body {
-  background-image: url(../../../../picture/portfolio-back.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-button {
-  background-color: transparent;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  border: 1px solid white;
-  width: 15%;
-  border-radius: 25px;
-  margin: auto;
-  cursor: pointer;
-  p {
-    text-align: center;
-    white-space: nowrap;
-  }
-}
-p {
-  font-family: -apple-system;
-}
 .app {
   width: 100vw;
 }
@@ -109,8 +79,21 @@ p {
     align-items: center;
     div {
       width: 15%;
-      border-bottom: 2px solid rgb(179, 217, 245);
+      border-bottom: 2px solid rgb(118, 118, 226);
       margin: 15px;
+      a{
+        text-decoration: none;
+      }
+      p{
+      cursor: pointer;
+      color: rgb(118, 118, 226);
+      }
+    }
+  }
+  &__categories div.active{
+    border-bottom: 2px solid rgb(179, 217, 245);
+    p{
+      color: rgb(179, 217, 245);
     }
   }
   &__header {
@@ -145,17 +128,26 @@ p {
     border: 2px solid rgb(122, 122, 242);
     border-radius: 50px;
     margin: 15px 0;
+    cursor: pointer;
     div {
       width: 40%;
       h2,
       p {
         margin: 0;
+        cursor: pointer;
       }
       p {
         font-size: 12px;
       }
     }
   }
+}
+.main__descriptions.active{
+  width: 100%;
+  height: 100%;
+}
+.main__descriptions.false{
+  display: none;
 }
 .project {
   margin-top: 100px;
@@ -171,6 +163,7 @@ p {
     height: 70vh;
     button {
       margin: 15px 88px 5px 0;
+      width: 20%;
     }
   }
   &__subwrapper-first {
@@ -267,6 +260,8 @@ p {
   }
 }
 .client {
+  height: 60vh;
+  display: grid;
   h2,
   h3 {
     text-align: center;
@@ -275,6 +270,7 @@ p {
   button {
     width: 10%;
     margin-left: 50%;
+    margin-top: 15px;
   }
   &__slideshow {
     margin: 0 auto;
@@ -288,10 +284,10 @@ p {
   &__opinion {
     width: 99%;
     height: 220px;
-    margin-right: 5px;
+    margin-right: 6px;
     border: 2px solid white;
     border-radius: 35px;
-    display: inline-block;
+    display: inline-grid;
     img {
       margin: 0 10px;
     }
@@ -354,13 +350,14 @@ p {
   &__iphone {
     position: relative;
     z-index: 2;
+    height: 100%;
   }
   &__projects {
-    width: 84%;
-    height: 92%;
+    width: 98%;
+    height: 51%;
     position: absolute;
-    top: 3%;
-    left: 9%;
+    top: 8%;
+    left: 1%;
     transition: 1000ms ease;
     img {
       width: 100%;
@@ -369,7 +366,7 @@ p {
     }
   }
   &__content{
-    width: 60%;
+    width: 51%;
     white-space: nowrap;
 overflow: hidden;
 div{
@@ -384,22 +381,29 @@ p{
 }
 button{
   position: absolute;
-bottom: 15%;
+bottom: 0;
 left: 42%;
+width: 20%;
 }
 }
   }
 }
-.websites {
+.ux__mobile{
+border-radius: 50px;
+ img{
+  width: 100%;
+}
+}
+.applications {
   &__projects {
-    width: 98%;
-    height: 51%;
+    width: 89%;
+    height: 95%;
     position: absolute;
-    top: 8%;
-    left: 1%;
+    top: 2%;
+    left: 6%;
   }
-  &__content{
-    width: 51%;
+  &__mobile{
+    height: 600px;
   }
 }
 .slideshowDot {
@@ -413,7 +417,6 @@ left: 42%;
   background-color: $c-flirt;
 }
 .leftbuton {
-  
   &__wrapper {
     width: 100px;
     border: 1px solid white;
@@ -436,4 +439,37 @@ left: 42%;
     cursor: pointer;
   }
   }
+}
+.contact{
+  margin: auto;
+width: 50%;
+form{
+  display: grid;
+  label{
+    color: white;
+text-align: center;
+  }
+  input,
+  textarea{
+    width: 50%;
+margin: 15px auto;
+height: 50px;
+border-radius: 10px;
+  }
+  textarea{
+    height: 150px;
+  }
+  button{
+    width: 20%;
+color: white;
+margin-top: 15px;
+margin-left: auto;
+height: 50px;
+  }
+  p{
+    margin: 0 0 0 20%;
+font-size: 40px;
+cursor: pointer;
+  }
+}
 }
