--- a/src/styles/themes/default/components/_section.scss
+++ b/src/styles/themes/default/components/_section.scss
@@ -321,6 +321,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background: rgb(95,83,181);
+background: linear-gradient(0deg, rgba(95,83,181,1) 0%, rgba(16,21,113,1) 60%);
   p {
     cursor: pointer;
   }
