add hovers in project component, use pretefier in mixins and edit content , add sections on scss components, add media query

--- a/src/styles/themes/default/theme.scss
+++ b/src/styles/themes/default/theme.scss
@@ -4,5 +4,13 @@
 @import '../global.scss';
 
 @import './components/section';
+@import './components/hamburger';
+@import './components/categories';
+@import './components/client';
+@import './components/contact';
+@import './components/footer';
+@import './components/header';
+@import './components/main';
+@import './components/project';
+@import './components/technology';
 @import './components/mediaQuery';
-@import './components/hamburger'
