--- a/src/styles/themes/mixins.scss
+++ b/src/styles/themes/mixins.scss
@@ -1,22 +1,22 @@
 @function pxToRem($pxsize, $rembase: 16) {
-    @return ($pxsize / $rembase) + rem;
+  @return ($pxsize / $rembase) + rem;
 }
 
 @mixin boxShadow($arg) {
-    -webkit-box-shadow: $arg;
-    box-shadow: $arg;
+  -webkit-box-shadow: $arg;
+  box-shadow: $arg;
 }
 
-@mixin myFlex(){
-    $prefixes: (-webkit-box, -ms-flexbox, -webkit-flex, flex);
-    @each $prefix in $prefixes {
-        display: $prefix;
-    }
+@mixin myFlex() {
+  $prefixes: (-webkit-box, -ms-flexbox, -webkit-flex, flex);
+  @each $prefix in $prefixes {
+    display: $prefix;
+  }
 }
 
-@mixin bottomRadius($arg){
-    border-bottom-left-radius: $arg;
-    border-bottom-right-radius: $arg;
+@mixin bottomRadius($arg) {
+  border-bottom-left-radius: $arg;
+  border-bottom-right-radius: $arg;
 }
 
 @mixin firstsecondthird {
@@ -28,30 +28,38 @@
   }
   div {
     position: absolute;
-    top: 15%;
+    top: 0;
+    width: 50%;
+    color: transparent;
+    transition: 500ms;
+    background-color: rgba(0, 0, 0, 0.79);
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 25px;
     p {
       font-family: -apple-system;
       font-size: 16px;
+      text-align: center;
     }
   }
 }
 $sizes: 1, 2, 3, 4, 5;
-@mixin createCol(){
-    @each $size in $sizes {
-        $index: index($sizes, $size);
-        .col-#{$index}{
-            width: $size;
-        }
+@mixin createCol() {
+  @each $size in $sizes {
+    $index: index($sizes, $size);
+    .col-#{$index} {
+      width: $size;
     }
+  }
 }
 
 @keyframes rotation {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(359deg);
-    }
+  from {
+    transform: rotate(0deg);
   }
-
-
+  to {
+    transform: rotate(359deg);
+  }
+}
