--- a/src/styles/themes/mixins.scss
+++ b/src/styles/themes/mixins.scss
@@ -26,7 +26,7 @@
     height: 100%;
     border-radius: 20px;
   }
-  div {
+  .project__description {
     position: absolute;
     top: 0;
     width: 50%;
@@ -38,12 +38,17 @@
     flex-direction: column;
     justify-content: center;
     border-radius: 25px;
+  transition: 500ms;
+  opacity: 0;
     p {
       font-family: -apple-system;
       font-size: 16px;
       text-align: center;
     }
   }
+.visible{
+  opacity: 1;
+}
 }
 $sizes: 1, 2, 3, 4, 5;
 @mixin createCol() {
