--- a/src/styles/themes/mixins.scss
+++ b/src/styles/themes/mixins.scss
@@ -60,6 +60,71 @@ $sizes: 1, 2, 3, 4, 5;
   }
 }
 
+@mixin categories($prowidth,$proheight,$protop,$proleft,$mobradius) {
+  &__wrapper {
+    width: 70%;
+    margin: auto;
+  }
+  &__subwrapper {
+    display: flex;
+    height: 600px;
+    margin-top: 20px;
+  }
+  &__mobile {
+    position: relative;
+    overflow: hidden;
+    img{
+      width: 100%;
+      border-radius: $mobradius;
+    }
+  }
+  &__iphone {
+    position: relative;
+    z-index: 2;
+    height: 100%;
+  }
+  &__projects {
+    width: $prowidth;
+    height: $proheight;
+    position: absolute;
+    top: $protop;
+    left: $proleft;
+    transition: 1000ms ease;
+    img {
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+    }
+  }
+  &__content {
+    width: 51%;
+    white-space: nowrap;
+    overflow: hidden;
+    div {
+      height: 100%;
+      width: 100%;
+      display: inline-block;
+      transition: ease 1000ms;
+      position: relative;
+      h3,
+      p {
+        text-align: center;
+        white-space: break-spaces;
+      }
+      button {
+        position: absolute;
+        bottom: 0;
+        left: 42%;
+        width: 140px;
+        transition: 300ms;
+        &:hover{
+          border: 3px solid #9947c2;
+        }
+      }
+    }
+  }
+}
+
 @keyframes rotation {
   from {
     transform: rotate(0deg);
