--- a/src/styles/themes/default/components/_mediaQuery.scss
+++ b/src/styles/themes/default/components/_mediaQuery.scss
@@ -11,6 +11,9 @@
   }
 }
 @media only screen and (max-width: 1000px) {
+  body{
+  background-position: 50%;
+  }
   .project {
     button {
       width: 150px;
