add function pxtorem

--- a/src/styles/themes/default/components/_contact.scss
+++ b/src/styles/themes/default/components/_contact.scss
@@ -28,7 +28,7 @@
       p {
         width: 6%;
         margin: 0 0 0 10%;
-        font-size: 40px;
+        font-size: pxToRem(40);
         cursor: pointer;
       }
     }
