--- a/src/styles/themes/default/components/_client.scss
+++ b/src/styles/themes/default/components/_client.scss
@@ -9,7 +9,7 @@
     h2,
     h3 {
       text-align: center;
-      font-size: 55px;
+      font-size: pxToRem(55);
     }
     button {
       width: 120px;
