--- a/src/styles/themes/default/components/_section.scss
+++ b/src/styles/themes/default/components/_section.scss
@@ -65,11 +65,11 @@ box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
   p:nth-child(1){
     text-align: right;
 margin: auto 35px auto 0;
-font-size: 26px;
+font-size: pxToRem(26);
 cursor: pointer;
   }
   p:nth-child(2){
     text-align: center;
-font-size: 18px;
+font-size: pxToRem(18);
   }
 }
