--- a/src/styles/themes/mixins.scss
+++ b/src/styles/themes/mixins.scss
@@ -73,6 +73,7 @@ $sizes: 1, 2, 3, 4, 5;
   &__mobile {
     position: relative;
     overflow: hidden;
+    align-self: center;
     img{
       width: 100%;
       border-radius: $mobradius;
@@ -101,7 +102,7 @@ $sizes: 1, 2, 3, 4, 5;
     white-space: nowrap;
     overflow: hidden;
     div {
-      height: 100%;
+      height: 94%;
       width: 100%;
       display: inline-block;
       transition: ease 1000ms;
