--- a/src/styles/themes/default/components/_project.scss
+++ b/src/styles/themes/default/components/_project.scss
@@ -17,6 +17,7 @@
     display: flex;
     position: relative;
     height: 70vh;
+    min-height: 773px;
     button {
       margin: 15px 88px 5px 0;
       width: 100px;
