add function to hamburger, del background from body and add to app, add paddings, add styles to media query

--- a/src/styles/themes/default/components/_header.scss
+++ b/src/styles/themes/default/components/_header.scss
@@ -2,7 +2,8 @@
 .header {
     position: relative;
     height: 100vh;
-    min-height: 700px;
+    min-height: 1020px;
+    max-height: 1065px;
     h2 {
       margin: auto;
     }
