--- a/src/styles/themes/default/components/_client.scss
+++ b/src/styles/themes/default/components/_client.scss
@@ -37,6 +37,7 @@
       }
       div {
         margin: 0 10px;
+        padding: 0 10px;
       }
       span img {
         transform: rotate(180deg);
