--- a/src/styles/themes/default/components/_section.scss
+++ b/src/styles/themes/default/components/_section.scss
@@ -1,5 +1,8 @@
 .app {
   width: 100vw;
+  background-image: url(../../../../picture/portfolio-back.png);
+  background-repeat: no-repeat;
+  background-size: cover;
   overflow-x: hidden;
 }
 .slideshowDot {
@@ -72,5 +75,6 @@ cursor: pointer;
   p:nth-child(2){
     text-align: center;
 font-size: pxToRem(18);
+padding: 5px 10px;
   }
 }
